--- a/novyxx-web/index.html
+++ b/novyxx-web/index.html
@@ -1,3 +1,4 @@
+<!-- @author LeCheng Zhang -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -81,9 +82,9 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Sobre nosotros</h2>
-                    <p>Novyxx es una agencia y escuela especializada en inteligencia artificial y automatización de procesos, diseñada para transformar la manera en que las empresas operan...</p>
-                    <p>Con un equipo apasionado por la innovación, ayudamos a empresas y negocios de todos los sectores...</p>
-                    <p>Nuestra misión es democratizar el acceso a la inteligencia artificial...</p>
+                    <p>Novyxx es una agencia y escuela especializada en inteligencia artificial y automatización de procesos, diseñada para transformar la manera en que las empresas operan. Nuestro enfoque combina tecnología avanzada con estrategias personalizadas para optimizar recursos, aumentar la eficiencia y potenciar el crecimiento de nuestros clientes.</p>
+                    <p>Con un equipo apasionado por la innovación, ayudamos a empresas y negocios de todos los sectores a integrar soluciones inteligentes que simplifican tareas repetitivas, mejoran la toma de decisiones y liberan tiempo para que sus equipos se enfoquen en lo que realmente importa.</p>
+                    <p>Nuestra misión es democratizar el acceso a la inteligencia artificial, permitiendo que empresas de todos los tamaños aprovechen el poder de la misma para crecer y competir en el mercado actual.</p>
                 </div>
                 <div class="ceo-info">
                     <div class="ceo-avatar">
@@ -367,4 +368,3 @@
     <script src="/js/main.js"></script>
 </body>
 </html>
-
