--- a/novyxx-web/index.html
+++ b/novyxx-web/index.html
@@ -21,7 +21,7 @@
             <div class="logo">Novyxx</div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#inicio">Inicio</a></li>º
                     <li><a href="#servicios">Servicios</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
@@ -95,6 +95,7 @@
                     <div>
                         <h3><b>LeCheng Zhang</b></h3>
                         <p style="color: #2E6BB0;"><b>CEO & Fundador</b></p>
+                        <p><a href="https://github.com/LeChengZhang07"><i class="fa-brands fa-github" style="font-size: x-large; color: white;"></i><a href="https://www.linkedin.com/in/lecheng-zhang-9075a036b/"><i class="fa-brands fa-linkedin" style="font-size: x-large; color: #2E6BB0; margin-left: 5px;"></i></a></a></p>
                     </div>
                 </div>
             </div>
