--- a/novyxx-web/index.html
+++ b/novyxx-web/index.html
@@ -127,7 +127,7 @@
         </div>
     </section>
     <footer>
-        <!-- Footer igual que en tu HTML -->
+        <!-- Footer -->
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
@@ -165,7 +165,7 @@
         </div>
     </footer>
 
-    <!-- Modales (sin cambios) -->
+    <!-- Modales -->
   <div id="legalModal" class="modal" aria-hidden="true">
         <div class="modal-content" role="dialog" aria-labelledby="legalTitle">
             <div class="modal-header">
@@ -360,7 +360,7 @@
         </div>
     </div>
 
-    <!-- Scripts externos + local -->
+    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
