--- a/novyxx-web/index.html
+++ b/novyxx-web/index.html
@@ -21,7 +21,7 @@
             <div class="logo">Novyxx</div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>º
+                    <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#servicios">Servicios</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
@@ -369,3 +369,4 @@
     <script src="/js/main.js"></script>
 </body>
 </html>
+
