--- a/novyxx-web/index.html
+++ b/novyxx-web/index.html
@@ -178,7 +178,7 @@
                 <strong>Nombre de la empresa:</strong> Novyxx<br>
                 <strong>Correo:</strong> contact.lechengzhang@gmail.com<br>
                 <strong>Teléfono:</strong> +34 665 592 840</p>
-                <h3>Objeto</h3>
+                <h3>Objetivo</h3>
                 <p>Este sitio web tiene por objetivo presentar los servicios de consultoría y desarrollo de soluciones de automatización mediante inteligencia artificial ofrecidos por Novyxx.</p>
                 <h3>Estado provisional</h3>
                 <p>El presente Aviso Legal es de carácter provisional. En caso de que la actividad pase a ser desarrollada bajo una persona jurídica o el titular obtenga NIF/CIF, dichos datos se actualizarán y se publicará la información registral correspondiente.</p>
@@ -369,4 +369,5 @@
     <script src="/js/main.js"></script>
 </body>
 </html>
+
 
