--- a/novyxx-web/index.html
+++ b/novyxx-web/index.html
@@ -18,7 +18,7 @@
 
     <header>
         <div class="container header-content">
-            <div class="logo">Novyxx</div>
+            <div class="logo"><a href="#inicio">Novyxx</a></div>
             <nav>
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
@@ -369,5 +369,6 @@
     <script src="/js/main.js"></script>
 </body>
 </html>
+
 
 
